# google-finance-scraper

./: .gitignore  .pre-commit-config.yaml  .releaserc.json  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  MANIFEST.in  README.md  main.py  positions.db  pyproject.toml
.github/workflows/: ci.yml  release.yml
examples/: positions.json  quickstart.py
src/portfoliotracker/: __init__.py  cli.py  main.py
src/portfoliotracker/adapters/: __init__.py  google_finance.py  json_positions.py  sqlite_snapshot.py  table_output.py
src/portfoliotracker/application/: __init__.py  portfolio.py
src/portfoliotracker/domain/: __init__.py  models.py
src/portfoliotracker/ports/: __init__.py  positions_source.py  quote_provider.py  snapshot_sink.py
tests/: test_application.py  test_domain.py  test_import.py  test_json_positions.py
workflows/: ci.yml
